--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
@@ -1,68 +1,86 @@
-<div gdColumns="repeat(2, 1fr)" class="gridGap">
-	<div fxLayout="row-reverse" class="mouth-right-column">
-		<div *ngFor="let tooth of quadrants?.quadrant1.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant1.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant1.code)"
-				matTooltip="Pieza {{quadrants.quadrant1.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
+<div style="margin: 40px;" fxLayout="column" fxLayoutGap="15px">
+
+
+	<div id="actions" fxLayout="row" fxLayoutAlign="end">
+		<button mat-stroked-button color="primary" class="uppercase" (click)="clearOdontogram()">Restablecer</button>
+	</div>
+
+
+	<div gdColumns="repeat(2, 1fr)" class="gridGap">
+		<div fxLayout="row-reverse" class="mouth-right-column">
+			<div *ngFor="let tooth of quadrants?.quadrant1.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant1.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant1.code)"
+					matTooltip="Pieza {{quadrants.quadrant1.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+
+		</div>
+		<div fxLayout="row">
+			<div *ngFor="let tooth of quadrants?.quadrant2.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant2.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant2.code)"
+					matTooltip="Pieza {{quadrants.quadrant2.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row-reverse" class="mouth-right-column">
+			<div *ngFor="let tooth of quadrants?.quadrant5.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant5.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant5.code)"
+					matTooltip="Pieza {{quadrants.quadrant5.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row">
+			<div *ngFor="let tooth of quadrants?.quadrant6.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant6.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant6.code)"
+					matTooltip="Pieza {{quadrants.quadrant6.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row-reverse" class="mouth-right-column">
+			<div *ngFor="let tooth of quadrants?.quadrant8.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant8.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant8.code)"
+					matTooltip="Pieza {{quadrants.quadrant8.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row">
+			<div *ngFor="let tooth of quadrants?.quadrant7.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant7.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant7.code)"
+					matTooltip="Pieza {{quadrants.quadrant7.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row-reverse" class="mouth-right-column">
+			<div *ngFor="let tooth of quadrants?.quadrant4.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant4.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant4.code)"
+					matTooltip="Pieza {{quadrants.quadrant4.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
+		</div>
+		<div fxLayout="row">
+			<div *ngFor="let tooth of quadrants?.quadrant3.teeth" fxLayout="column" fxLayoutAlign="center center">
+				<span>{{quadrants.quadrant3.code}}{{tooth.code}}</span>
+				<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant3.code)"
+					matTooltip="Pieza {{quadrants.quadrant3.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip"
+					[findingsAndProcedures]="odontogramService.getActionsFrom(tooth.snomed.sctid)">
+				</app-tooth>
+			</div>
 		</div>
 
-	</div>
-	<div fxLayout="row">
-		<div *ngFor="let tooth of quadrants?.quadrant2.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant2.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant2.code)"
-				matTooltip="Pieza {{quadrants.quadrant2.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row-reverse" class="mouth-right-column">
-		<div *ngFor="let tooth of quadrants?.quadrant5.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant5.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant5.code)"
-				matTooltip="Pieza {{quadrants.quadrant5.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row">
-		<div *ngFor="let tooth of quadrants?.quadrant6.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant6.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant6.code)"
-				matTooltip="Pieza {{quadrants.quadrant6.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row-reverse" class="mouth-right-column">
-		<div *ngFor="let tooth of quadrants?.quadrant8.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant8.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant8.code)"
-				matTooltip="Pieza {{quadrants.quadrant8.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row">
-		<div *ngFor="let tooth of quadrants?.quadrant7.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant7.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant7.code)"
-				matTooltip="Pieza {{quadrants.quadrant7.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row-reverse" class="mouth-right-column">
-		<div *ngFor="let tooth of quadrants?.quadrant4.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant4.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant4.code)"
-				matTooltip="Pieza {{quadrants.quadrant4.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
-	</div>
-	<div fxLayout="row">
-		<div *ngFor="let tooth of quadrants?.quadrant3.teeth" fxLayout="column" fxLayoutAlign="center center">
-			<span>{{quadrants.quadrant3.code}}{{tooth.code}}</span>
-			<app-tooth [toothTreatment]="toothTreatment" (click)="openToothDialog(tooth,quadrants.quadrant3.code)"
-				matTooltip="Pieza {{quadrants.quadrant3.code}}{{tooth.code}}" matTooltipClass="multiline-tooltip">
-			</app-tooth>
-		</div>
 	</div>
 
 </div>
