--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -138,11 +138,14 @@
 		</section>
 
 		<ng-container *ngIf="downdLoadReportIsEnabled && !isAbsent() && params.hasPermissionToAssignShift">
-			<section id="report">
-				<span class="mat-body-strong">Descargar informes</span>
+			<section id="report" fxLayout="column">
+				<span class="mat-body-strong" fxLayout="row">Descargar informes</span>
 				<section class="example-section">
-					<mat-checkbox class="example-margin" (change)="enableDowndloadReportButton($event.checked)">
+					<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadAnexo($event.checked)">
 						<span class="mat-body">Anexo II</span>
+					</mat-checkbox>
+					<mat-checkbox class="example-margin" fxLayout="row" (change)="enableDowndloadFormulario($event.checked)">
+						<span class="mat-body">Formulario V</span>
 					</mat-checkbox>
 				</section>
 			</section>
@@ -153,7 +156,7 @@
 		align="end">
 		<ng-container *ngIf="downdLoadReportIsEnabled && !isAbsent() && params.hasPermissionToAssignShift">
 			<button type="button" mat-flat-button color="primary" id="report-appointment"
-					name="report-appointment" (click)="getReportAppointment()" [disabled]="!isEnableDowndloadReportButton">
+					name="report-appointment" (click)="getReportAppointment()" [disabled]="!isCheckedDowndloadAnexo && !isCheckedDowndloadFormulario">
 				<span class="uppercase" [translate]="'turnos.report.TITLE'"></span>
 			</button>
 		</ng-container>
