--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -82,7 +82,7 @@
 			</div>
 			<div *appHasRole="['ADMINISTRATIVO']" align="end">
 				<div class="search" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="20px">
-					<button mat-stroked-button color="primary" type="button" (click)="openScanPatientDialog()">
+					<button mat-stroked-button color="primary" type="button" (click)="openScanPatientDialog()" [disabled]="disableButtonScan">
 						<span class="material-icons" color="primary">crop_free</span>
 						<span [translate]="'pacientes.home.find_add_section.BUTTON_SCAN'"></span>
 					</button>
