tg-4529 Cambios en sctid de restos radiculares y mancha blanca

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -44,7 +44,7 @@
 		xmlns="http://www.w3.org/2000/svg">
 		<path d="M0 1H14" stroke="#2687C5" stroke-width="2" />
 	</svg>
-	<svg id="restos_radiculares" width="14" height="10" viewBox="0 0 14 10" fill="none"
+	<svg id="two_short_blue_lines" width="14" height="10" viewBox="0 0 14 10" fill="none"
 		xmlns="http://www.w3.org/2000/svg">
 		<path d="M0 1H14" stroke="#2687C5" stroke-width="2" />
 		<path d="M0 9H14" stroke="#2687C5" stroke-width="2" />
