tg-4538 [FE- Refactor] Recibimiento de acciones de pieza desde el dialogo

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -2,8 +2,7 @@
 
 	<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
 		<app-tooth #tooth [toothTreatment]="toothTreatment" (selectedSurfacesEmitter)="reciveSelectedSurfaces($event)"
-			[newFinding]="newHallazgoId" (commonActionsEmitter)="reciveCommonActions($event)"
-			[setFirstProcedure]="firstProcedureId" [setSecondProcedure]="secondProcedureId"
+			[newFinding]="newHallazgoId" [setFirstProcedure]="firstProcedureId" [setSecondProcedure]="secondProcedureId"
 			[setThirdProcedure]="thirdProcedureId"
 			[findingsAndProcedures]="odontogramService.getActionsFrom(data.tooth.snomed.sctid)">
 		</app-tooth>
